--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ serde = { version = "1.0.160", features = ["derive"] }
 serde_with = "2.3.2"
 thiserror = "1.0.40"
 tokio = { version = "1.27.0", features = ["full"] }
+utoipa = { version = "3.3.0", features = ["axum_extras"] }
+utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
