--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.70"
 axum = { version = "0.6.15", features = ["macros"] }
+http-cache-reqwest = "0.9.0"
 reqwest = { version = "0.11.16", features = ["brotli", "gzip", "deflate", "json"] }
+reqwest-middleware = "0.2.1"
 scraper = "0.16.0"
 serde = { version = "1.0.160", features = ["derive"] }
 serde_with = "2.3.2"
