--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ reqwest = { version = "0.11.16", features = ["brotli", "gzip", "deflate", "json"
 reqwest-middleware = "0.2.1"
 scraper = "0.16.0"
 serde = { version = "1.0.160", features = ["derive"] }
+serde_json = "1.0.96"
 serde_with = "2.3.2"
 thiserror = "1.0.40"
 tokio = { version = "1.27.0", features = ["full"] }
