--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,6 @@ serde_json = "1.0.96"
 serde_with = "2.3.2"
 thiserror = "1.0.40"
 tokio = { version = "1.27.0", features = ["full"] }
+tower-http = { version = "0.4.0", features = ["fs"] }
 utoipa = { version = "3.3.0", features = ["axum_extras"] }
 utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
