--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,13 @@ axum = { version = "0.6.18", features = ["macros"] }
 flate2 = "1.0.26"
 log = "0.4.19"
 once_cell = "1.18.0"
-reqwest = { version = "0.11.17", features = ["json"] }
+reqwest = { version = "0.11.17", features = [
+  "json",
+  "brotli",
+  "gzip",
+  "deflate",
+] }
+scraper = "0.16.0"
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96"
 thiserror = "1.0.43"
