--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,18 +11,21 @@ path = "src/lib.rs"
 [dependencies]
 anyhow = "1.0.71"
 axum = { version = "0.6.18", features = ["macros"] }
-flate2 = "1.0.26"
+chrono = { version = "0.4.26", features = ["serde"] }
+chrono-tz = "0.8.3"
 log = "0.4.19"
 once_cell = "1.18.0"
+regex = "1.9.3"
 reqwest = { version = "0.11.17", features = [
   "json",
   "brotli",
   "gzip",
   "deflate",
 ] }
-scraper = "0.16.0"
+scraper = "0.17.1"
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96"
+serde_with = "3.3.0"
 thiserror = "1.0.43"
 tokio = { version = "1.28.0", features = ["full"] }
 tower-http = { version = "0.4.1", features = [
