--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ path = "src/lib.rs"
 [dependencies]
 anyhow = "1.0.71"
 axum = { version = "0.6.18", features = ["macros"] }
+capitalize = "0.1.0"
 chrono = { version = "0.4.26", features = ["serde"] }
 chrono-tz = "0.8.3"
 log = "0.4.19"
