--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ tower-http = { version = "0.4.1", features = [
 ] }
 tower-request-id = "0.2.1"
 tracing = "0.1.37"
+tracing-appender = "0.2.2"
 tracing-bunyan-formatter = "0.3.7"
 tracing-log = "0.1.3"
 tracing-subscriber = { version = "0.3.17", features = [
