--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ axum = { version = "0.6.18", features = ["macros"] }
 capitalize = "0.1.0"
 chrono = { version = "0.4.26", features = ["serde"] }
 chrono-tz = "0.8.3"
+http-cache-reqwest = "0.11.1"
 log = "0.4.19"
 once_cell = "1.18.0"
 regex = "1.9.3"
@@ -23,6 +24,7 @@ reqwest = { version = "0.11.17", features = [
   "gzip",
   "deflate",
 ] }
+reqwest-middleware = "0.2.3"
 scraper = "0.17.1"
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96"
