--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ capitalize = "0.1.0"
 chrono = { version = "0.4.26", features = ["serde"] }
 chrono-tz = "0.8.3"
 http-cache-reqwest = "0.11.1"
+itertools = "0.11.0"
 log = "0.4.19"
 once_cell = "1.18.0"
 regex = "1.9.3"
