--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ axum = { version = "0.6.18", features = ["macros"] }
 capitalize = "0.1.0"
 chrono = { version = "0.4.26", features = ["serde"] }
 chrono-tz = "0.8.3"
+futures = "0.3.28"
 http-cache-reqwest = "0.11.1"
 itertools = "0.11.0"
 log = "0.4.19"
