--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,5 +48,5 @@ tracing-subscriber = { version = "0.3.17", features = [
   "registry",
   "env-filter",
 ] }
-utoipa = "3.5.0"
+utoipa = { version = "3.5.0", features = ["preserve_order"] }
 utoipa-redoc = { version = "0.1.0", features = ["axum"] }
