--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ path = "src/lib.rs"
 
 [dependencies]
 anyhow = "1.0.71"
+async-trait = "0.1.73"
 axum = { version = "0.6.18", features = ["macros"] }
 capitalize = "0.1.0"
 chrono = { version = "0.4.26", features = ["serde"] }
@@ -53,3 +54,4 @@ utoipa-redoc = { version = "0.1.0", features = ["axum"] }
 
 [dev-dependencies]
 http = "0.2.9"
+pretty_assertions = "1.4.0"
